--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "lodash": "^4.17.11",
         "mongoose": "^5.3.13",
         "morgan": "^1.9.1",
+        "nodemailer": "^6.4.6",
         "validator": "^10.9.0"
     },
     "devDependencies": {
